objects/OSM_Application_Feature__mdt.object
<CustomObject>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Feature__c</fullName>
        <label>Role/Feature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SIR</fullName>
                    <default>true</default>
                    <label>SIR</label>
                </value>
                <value>
                    <fullName>CIHR</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Deal_FS</fullName>
                </value>
                <value>
                    <fullName>Deal_Maint</fullName>
                </value>
                <value>
                    <fullName>Distr</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>SSOEM/Reseller</fullName>
                </value>
                <value>
                    <fullName>SSOEM/Reseller_Komatsu</fullName>
                </value>
                <value>
                    <fullName>Votech</fullName>
                </value>
                <value>
                    <fullName>Deal_DTNA</fullName>
                </value>
                <value>
                    <fullName>Deal_FS_HHP</fullName>
                </value>
                <value>
                    <fullName>Deal_Maint_HHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OSM Application Feature</label>
    <listViews>
        <fullName>OSM_View</fullName>
        <columns>Product_Name__c</columns>
        <columns>User_Type__c</columns>
        <columns>MasterLabel</columns>
        <columns>Role_Feature__c</columns>
        <columns>DeveloperName</columns>
        <columns>Product_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>BAMS</value>
        </filters>
        <label>OSM View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>OSM Application Features</pluralLabel>
</CustomObject>